--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.7",
+    "axios": "^0.21.1",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
