--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/next": "^9.0.0",
     "@types/styled-components": "^5.1.7",
     "axios": "^0.21.1",
     "next": "10.0.7",
