--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-switch": "^6.0.0",
     "styled-components": "^5.2.1"
   },
